--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,7 +19,8 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "sass-loader": "^13.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
